--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -133,12 +133,12 @@
 		
 	},
 	"RejectedDocument": {
-		"RejectedFiles": "Dossiers reJétés",
+		"RejectedFiles": "Dossiers rejétés",
 		"Workspace": "Ceci est votre espace de travail",
 		"ViewAllFoldersInterface": "  A partir de cette interface vous pouvez visualiser l'ensemble des dossiers que vous avez soumis mais qui ont été rejétés pour une raison ou une autre",
 		"NoteSecurite1": "Note sur la sécurité:",
 		"NoteSecurite2": "toutes vos donnees sont securisees et nous vous garantissions leur suivie et leur access en toute securite",
-		"RejectedFolders": "Dossiers reJétés",
+		"RejectedFolders": "Dossiers rejétés",
 		"Name": "Nom",
 		"Description": "Description",
 		"JointFiles": "Pièces jointes",
@@ -234,6 +234,117 @@
 		"Languages": "Langue inconnue"
 		
 
+	},
+	"AdminHome": {
+		"ArchivedFolders": "Dossiers Archivés",
+		"ServerUnavailable": "Serveur indisponible veuillez vérifier votre connexion a internet",
+		"WaitingFolders": "Dossiers en Attente",
+		"onWorkingFolders": "Dossiers en Traitements",
+		"rejectedFolders": "Dossiers rejetés",
+		"editProfile": "Modifier mon profile",
+		"Name": "Nom",
+		"Surname": "Prénom",
+		"PhoneNumber": "Numéro de téléphone",
+		"BirthDate": "Date de naissance",
+		"BirthPlace": "Lieu de naissance",
+		"SpokenLang": "Langue parlé",
+		"allRejectedFolders": "Total dossiers rejetés",
+		"allSubmittedFolders": "Total dossiers",
+		"allOnWorkingFolders": "Total dossiers en traitement",
+		"ActivityStat": "Statistiques sur vos activités",
+		"IntroDescription": "A partir de cette interface vous pouvez traiter des dossiers qui vous sont envoyés et consulter l'historique des dossiers traités dans le passé",
+		"Welcome": "Bienvenue",
+		"WorkSpace": "Ceci est votre espace de travail",
+		"CompleteProfile": "Compléter votre profil"
+
+	},
+	"AdminAcceptedDocument": {
+		"Foldersintreatment": "Dossiers en cours de traitement",
+		"Workspace": "Ceci est votre espace de travail",
+		"ViewAllFoldersInterface": "A partir de cette interface vous pouvez visualiser l'ensemble des dossiers qui sont en cours de traitement",
+		"NoteSecurite1": "Note sur la sécurite:",
+		"NoteSecurite2": "les documents qui vous sont soumis sont d'une importance capitale.vous devez donc etre méticuleux et efficace lors de leur prise en charge",
+		"Name": "Nom",
+		"JointFiles": "Pièces jointes",
+		"SubmissionDate": "Date de soumission",
+		"Percentage": "Pourcentage",
+		"PleaseWait": "Patientez svp...",
+		"EmptyList": "Liste vide"
+		
+	},
+	"AdminLeftSide": {
+		"MyFiles": "Gestion des dossiers",
+		"FollowEvolution": "Suivre l'Évolution",
+		"filesInTreatment": "Dossiers en traitement",
+		"PendingFiles": "Dossiers a traiter",
+		"RejectedFiles": "Dossiers rejétés",
+		"ArchivedFiles": "Dossiers archivés",
+		"Profile": "Profil",
+		"ModifyProfile": "Modifier mes infos"
+	},
+	"AdminArchivedDocument": {
+		"ArchivedFiles": "Dossiers traités et archivés",
+		"Workspace": "Ceci est votre espace de travail",
+		"ViewAllFoldersInterface": "A partir de cette interface vous pouvez visualiser l'ensemble des dossiers que vous avez traités",
+		"NoteSecurite1": "Note sur la sécurité:",
+		"NoteSecurite2": "les documents qui vous sont soumis sont d'une importance capitale.vous devez donc etre méticuleux et efficace lors de leur prise en charge",
+		"ArchivedFolders": "Dossiers archivés",
+		"Name": "Nom",
+		"Description": "Description",
+		"JointFiles": "Pièces jointes",
+		"SubmissionDate": "Date de soumission",
+		"Actions": "Actions",
+		"PleaseWait": "Patientez svp...",
+		"EmptyList": "Liste vide"
+		
+	},
+	"AdminPendingDocument": {
+		"PendingFiles": "Dossiers en attente de traitements",
+		"Workspace": "Ceci est votre espace de travail",
+		"ViewAllFoldersInterface": "A partir de cette interface vous pouvez visualiser l'ensemble des dossiers qui sont en attente de votre prise en charge",
+		"NoteSecurite1": "Note sur la sécurité:",
+		"NoteSecurite2": "les documents qui vous sont soumis sont d'une importance capitale.vous devez donc etre méticuleux et efficace lors de leur prise en charge",
+		"PendingFolders": "Dossiers en attente de traitement",
+		"Name": "Nom",
+		"Description": "Description",
+		"JointFiles": "Pièces jointes",
+		"SubmissionDate": "Date de soumission",
+		"Actions": "Actions",
+		"PleaseWait": "Patientez svp...",
+		"EmptyList": "Liste vide"
+		
+	},
+	"AdminRejectedDocument": {
+		"RejectedFiles": "Dossiers rejétés",
+		"Workspace": "Ceci est votre espace de travail",
+		"ViewAllFoldersInterface": "  A partir de cette interface vous pouvez visualiser l'ensemble des dossiers que vous avez rejétés pour une raison ou une autre",
+		"NoteSecurite1": "Note sur la sécurité:",
+		"NoteSecurite2": "les documents qui vous sont soumis sont d'une importance capitale.vous devez donc etre méticuleux et efficace lors de leur prise en charge",
+		"RejectedFolders": "Dossiers rejétés",
+		"Name": "Nom",
+		"Description": "Description",
+		"JointFiles": "Pièces jointes",
+		"SubmissionDate": "Date de soumission",
+		"Actions": "Actions",
+		"PleaseWait": "Patientez svp...",
+		"EmptyList": "Liste vide"
+		
+	},
+	"AdminUpdateInfo": {
+		"Welcome": "Bienvenue",
+		"Workspace": "A partir de cette interface vous pouvez suivre l'evolution des documents que vous avez soumis et consulter l'historique des documents soumis dans le passe",
+		"ViewAllFoldersInterface": "  A partir de cette interface vous pouvez visualiser l'ensemble des dossiers que vous avez rejétés pour une raison ou une autre",
+		"NoteSecurite1": "Note sur la sécurité:",
+		"NoteSecurite2": "les documents qui vous sont soumis sont d'une importance capitale.vous devez donc etre méticuleux et efficace lors de leur prise en charge",
+		"RejectedFolders": "Dossiers rejétés",
+		"Name": "Nom",
+		"Description": "Description",
+		"JointFiles": "Pièces jointes",
+		"SubmissionDate": "Date de soumission",
+		"Actions": "Actions",
+		"PleaseWait": "Patientez svp...",
+		"EmptyList": "Liste vide"
+		
 	}
 
 }
