Mise a jour de la création d'un dossier et envoie du mail avec la description du service

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -29,6 +29,7 @@
 		"PhotoProfil": "Choose a profile picture",
 		"Formulaire": "Fill the form below to create your",
 		"Compte": "account",
+		"SurGepad": "on GEPAD",
 		"Password" : "Password",
 		"ConfirmPwd" : "Confirm password",
 		"Connection" : "Sign in",
