--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -39,6 +39,7 @@
 		"PhotoProfil": "Choisir une photo de profile",
 		"Formulaire": "Remplir le formulaire ci-dessous pour créer votre",
 		"Compte": "compte",
+		"SurGepad": "sur GEPAD",
 		"Password" : "Mot de passe",
 		"ConfirmPwd" : "Confirmez le mot de passe",
 		"Connection" : "Connectez-vous ici",
